CRLF to LF and fixes footer overflow

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -13,6 +13,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  z-index: 0;
 
   h1 {
     font-weight: bolder;
